Rename 'folder' to 'collection' in catalog and update related components - `Folder` will be used later to designate directory in the filesystem. - Resources and Collections models are now generated by codegen.
