# agent/src/models/mod.rs
@@ -1,12 +1,12 @@
 pub mod agent;
 pub mod auth;
+pub mod collections;
 pub mod connections;
 pub mod dataframes;
 pub mod datasources;
 pub mod drivers;
 pub mod environments;
 pub mod errors;
-pub mod folders;
 pub mod push_notifications;
 pub mod queries;
 pub mod resources;
@@ -15,10 +15,10 @@ pub mod variables;
 pub mod workspaces;
 
 // Re-export the models.
+pub use collections::{Collection, SpecialCollection};
 pub use connections::Connection;
 pub use drivers::Driver;
 pub use environments::Environment;
-pub use folders::Folder;
 pub use push_notifications::{PushMessage, PushMessageType};
 pub use queries::QueryExecution;
 pub use queries::QueryExecutionStatus;
